--- a/evaluation/unit5-c1/src/App.css
+++ b/evaluation/unit5-c1/src/App.css
@@ -2,37 +2,45 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  border: 1px solid rgb(99, 22, 22);
+  margin: 3px;
+  height: 300px;
+  padding: 2px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.india{
+  text-align: start;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.banner{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.addScore{
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addScore1{
+  background-color:red ;
+  color: aliceblue;
+  margin-left: 100px;
+  margin-right: 100px;
 }
+.addScore4{
+  background-color:red ;
+  color: aliceblue;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.addScore6{
+  background-color:red ;
+  color: aliceblue;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.addWicket{
+  justify-content: space-around;
+}
+.addWicket
